Fix menu padding on smaller devices

--- a/src/less/components/menu.less
+++ b/src/less/components/menu.less
@@ -22,6 +22,10 @@
 		padding: 0 20px;
 	}
 
+	@media all and (max-width: 400px) {
+		padding: 0 10px;
+	}
+
 	&.active {
 		.fadeInUp;
 	}
